Added analysis of general distribution and failures

--- a/data/README.html
+++ b/data/README.html
@@ -33,7 +33,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="README_files/libs/quarto-html/quarto-syntax-highlighting-ea385d0e468b0dd5ea5bf0780b1290d9.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="README_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="README_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="README_files/libs/bootstrap/bootstrap-fc5572c13d858e64e4a159c5ae35792b.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="README_files/libs/bootstrap/bootstrap-40b46538e14c49cdc367c6d0b1db5605.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -105,11 +105,11 @@ ul.task-list li input[type="checkbox"] {
 <li><code>internet</code>: Internet access at home (yes/no).</li>
 <li><code>romantic</code>: In a romantic relationship (yes/no).</li>
 <li><code>famrel</code>: Quality of family relationships (1 = very bad to 5 = excellent).</li>
-<li><code>freetime</code>: Free time after school (1–5).</li>
-<li><code>goout</code>: Going out with friends (1–5).</li>
-<li><code>Dalc</code>: Workday alcohol consumption (1–5).</li>
-<li><code>Walc</code>: Weekend alcohol consumption (1–5).</li>
-<li><code>health</code>: Current health status (1–5).</li>
+<li><code>freetime</code>: Free time after school (1–5 scale).</li>
+<li><code>goout</code>: Going out with friends (1–5 scale).</li>
+<li><code>Dalc</code>: Workday alcohol consumption (1–5 scale).</li>
+<li><code>Walc</code>: Weekend alcohol consumption (1–5 scale).</li>
+<li><code>health</code>: Current health status (1–5 scale).</li>
 <li><code>absences</code>: Number of school absences (numeric).</li>
 <li><code>G1</code>: First-period grade (numeric: 0–20).</li>
 <li><code>G2</code>: Second-period grade (numeric: 0–20).</li>
